# CS2612-Compiler-Backend

./: CMakeLists.txt  README.md  project1.cpp  project1_new.cpp  说明.docx
.github/workflows/: ci.yml
scripts/: build.ps1  build.sh
tests/: test_all.cpp
